// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Slider Controlled 1`] = `
Array [
  .c3 {
  box-sizing: border-box;
  position: absolute;
  width: 30px;
  height: 30px;
  top: 50%;
  border-radius: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background: #FFFFFF;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  border-width: 4px;
  border-style: solid;
  border-color: #0046FF;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

.c3:active {
  -webkit-transform: translateY(-50%) scale3d(0.85,0.85,0.85);
  -ms-transform: translateY(-50%) scale3d(0.85,0.85,0.85);
  transform: translateY(-50%) scale3d(0.85,0.85,0.85);
}

.c1 {
  position: relative;
  width: 100%;
  height: 12px;
  background: #EBEBE8;
  border-radius: inherit;
  cursor: default;
}

.c2 {
  width: 100%;
  border-radius: inherit;
  background: #0046FF;
  height: 12px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 30px;
}

.c0:focus {
  outline: none;
}

<div
    className="c0"
    onClick={[Function]}
    tabIndex={-1}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        style={
          Object {
            "width": "50%",
          }
        }
      />
      <div
        aria-orientation="horizontal"
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={50}
        className="c3"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "calc(50% - 30px * 0.5)",
          }
        }
        tabIndex={0}
      />
    </div>
  </div>,
  .c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c9 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c6 {
  position: relative;
  box-shadow: 0 1px 3px rgba(0,0,0,0.03);
}

.c8 {
  width: 40px;
  height: 40px;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  padding: 0;
  cursor: pointer;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c8:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c8:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c8:first-of-type {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

.c8:active:enabled {
  background-color: #0046FF;
}

.c8:active:enabled svg {
  fill: #FFFFFF;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  background-color: #FFFFFF;
  outline: none;
  border: 1px solid #BCBCB6;
  position: relative;
  height: 40px;
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  padding: 8px;
  margin: 0 -1px;
  min-width: 0;
  z-index: 1;
}

.c7:hover {
  border-color: #4B4B46;
  z-index: 2;
}

.c7:focus {
  border-color: #0046FF;
  z-index: 3;
}

.c7::-webkit-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7::-moz-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7:-ms-input-placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

.c7::placeholder {
  color: #6E6E69;
  height: inherit;
  line-height: inherit;
  opacity: 1;
}

<div
    className="c0"
  >
    <label
      className="c1"
      hidden={false}
      htmlFor="unique-id"
    >
      <span
        className="c2"
      >
        <div
          className="c3"
        >
          Controlled from outside 
        </div>
      </span>
    </label>
    <span
      className="c4"
    >
      <div
        className="c5 c6"
      >
        <input
          className="NormalizedInput__Input-sc-1m4kmh9-0 c7"
          id="unique-id"
          inputMode="decimal"
          max="100"
          min="0"
          onChange={[Function]}
          onKeyDown={[Function]}
          step="1"
          type="text"
          value="50"
        />
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            decrease number by 
            1
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 2"
          >
            <path
              d="M12.166 0v2h-12V0z"
              fillRule="evenodd"
            />
          </svg>
        </button>
        <button
          className="c8"
          onClick={[Function]}
          type="button"
        >
          <div
            className="c9"
          >
            increase number by 
            1
          </div>
          <svg
            aria-hidden="true"
            className="c10"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 12"
          >
            <path
              d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </span>
  </div>,
]
`;

exports[`Storyshots Molecules | Slider Default 1`] = `
Array [
  .c3 {
  box-sizing: border-box;
  position: absolute;
  width: 30px;
  height: 30px;
  top: 50%;
  border-radius: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background: #FFFFFF;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  border-width: 4px;
  border-style: solid;
  border-color: #0046FF;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

.c3:active {
  -webkit-transform: translateY(-50%) scale3d(0.85,0.85,0.85);
  -ms-transform: translateY(-50%) scale3d(0.85,0.85,0.85);
  transform: translateY(-50%) scale3d(0.85,0.85,0.85);
}

.c1 {
  position: relative;
  width: 100%;
  height: 12px;
  background: #EBEBE8;
  border-radius: inherit;
  cursor: default;
}

.c2 {
  width: 100%;
  border-radius: inherit;
  background: #0046FF;
  height: 12px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 30px;
}

.c0:focus {
  outline: none;
}

<div
    className="c0"
    onClick={[Function]}
    tabIndex={-1}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        style={
          Object {
            "width": "50%",
          }
        }
      />
      <div
        aria-orientation="horizontal"
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={50}
        className="c3"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "calc(50% - 30px * 0.5)",
          }
        }
        tabIndex={0}
      />
    </div>
  </div>,
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<span
    className="c0"
  >
    
    50
     Kronor
  </span>,
]
`;

exports[`Storyshots Molecules | Slider Disabled 1`] = `
Array [
  .c3 {
  box-sizing: border-box;
  position: absolute;
  width: 30px;
  height: 30px;
  top: 50%;
  border-radius: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background: #FFFFFF;
  cursor: not-allowed;
  border-width: 4px;
  border-style: solid;
  border-color: #EBEBE8;
  border-color: #EBEBE8;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

.c3:active {
  -webkit-transform: translateY(-50%) scale3d(0.85,0.85,0.85);
  -ms-transform: translateY(-50%) scale3d(0.85,0.85,0.85);
  transform: translateY(-50%) scale3d(0.85,0.85,0.85);
}

.c1 {
  position: relative;
  width: 100%;
  height: 12px;
  background: #EBEBE8;
  border-radius: inherit;
  cursor: default;
}

.c2 {
  width: 100%;
  border-radius: inherit;
  background: #EBEBE8;
  height: 12px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 30px;
}

.c0:focus {
  outline: none;
}

<div
    className="c0"
    onClick={[Function]}
    tabIndex={-1}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        style={
          Object {
            "width": "50%",
          }
        }
      />
      <div
        aria-orientation="horizontal"
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={50}
        className="c3"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "calc(50% - 30px * 0.5)",
          }
        }
        tabIndex={0}
      />
    </div>
  </div>,
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<span
    className="c0"
  >
    
    50
     Kronor
  </span>,
]
`;

exports[`Storyshots Molecules | Slider Maximum Value 1`] = `
Array [
  .c3 {
  box-sizing: border-box;
  position: absolute;
  width: 30px;
  height: 30px;
  top: 50%;
  border-radius: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background: #FFFFFF;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  border-width: 4px;
  border-style: solid;
  border-color: #0046FF;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

.c3:active {
  background: hsl(223.5,100%,45%);
  -webkit-transform: translateY(-50%) scale3d(0.85,0.85,0.85);
  -ms-transform: translateY(-50%) scale3d(0.85,0.85,0.85);
  transform: translateY(-50%) scale3d(0.85,0.85,0.85);
}

.c3:focus {
  border: 4px solid hsl(223.5,100%,45%);
  background: hsl(223.5,100%,45%);
}

.c1 {
  position: relative;
  width: 100%;
  height: 12px;
  background: #EBEBE8;
  border-radius: inherit;
  cursor: default;
}

.c2 {
  width: 100%;
  border-radius: inherit;
  background: #0046FF;
  height: 12px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 30px;
}

.c0:focus {
  outline: none;
}

<div
    className="c0"
    onClick={[Function]}
    tabIndex={-1}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        style={
          Object {
            "width": "100%",
          }
        }
      />
      <div
        aria-orientation="horizontal"
        aria-valuemax={100}
        aria-valuemin={50}
        aria-valuenow={100}
        className="c3"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "calc(100% - 30px * 1)",
          }
        }
        tabIndex={0}
      />
    </div>
  </div>,
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<span
    className="c0"
  >
    
    100
     Kronor
  </span>,
]
`;

exports[`Storyshots Molecules | Slider Minimum Value 1`] = `
Array [
  .c3 {
  box-sizing: border-box;
  position: absolute;
  width: 30px;
  height: 30px;
  top: 50%;
  border-radius: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background: #FFFFFF;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  border-width: 4px;
  border-style: solid;
  border-color: #0046FF;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

.c3:active {
  background: hsl(223.5,100%,45%);
  -webkit-transform: translateY(-50%) scale3d(0.85,0.85,0.85);
  -ms-transform: translateY(-50%) scale3d(0.85,0.85,0.85);
  transform: translateY(-50%) scale3d(0.85,0.85,0.85);
}

.c3:focus {
  border: 4px solid hsl(223.5,100%,45%);
  background: hsl(223.5,100%,45%);
}

.c1 {
  position: relative;
  width: 100%;
  height: 12px;
  background: #EBEBE8;
  border-radius: inherit;
  cursor: default;
}

.c2 {
  width: 100%;
  border-radius: inherit;
  background: #0046FF;
  height: 12px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 30px;
}

.c0:focus {
  outline: none;
}

<div
    className="c0"
    onClick={[Function]}
    tabIndex={-1}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        style={
          Object {
            "width": "0%",
          }
        }
      />
      <div
        aria-orientation="horizontal"
        aria-valuemax={10}
        aria-valuemin={0}
        aria-valuenow={0}
        className="c3"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "calc(0% - 30px * 0)",
          }
        }
        tabIndex={0}
      />
    </div>
  </div>,
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<span
    className="c0"
  >
    
    0
     Kronor
  </span>,
]
`;

exports[`Storyshots Molecules | Slider Negative To Positive 1`] = `
Array [
  .c3 {
  box-sizing: border-box;
  position: absolute;
  width: 30px;
  height: 30px;
  top: 50%;
  border-radius: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background: #FFFFFF;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  border-width: 4px;
  border-style: solid;
  border-color: #FF1900;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

.c3:active {
  background: hsl(5.899999999999977,100%,45%);
  -webkit-transform: translateY(-50%) scale3d(0.85,0.85,0.85);
  -ms-transform: translateY(-50%) scale3d(0.85,0.85,0.85);
  transform: translateY(-50%) scale3d(0.85,0.85,0.85);
}

.c3:focus {
  border: 4px solid hsl(5.899999999999977,100%,45%);
  background: hsl(5.899999999999977,100%,45%);
}

.c1 {
  position: relative;
  width: 100%;
  height: 12px;
  background: #EBEBE8;
  border-radius: inherit;
  cursor: default;
}

.c2 {
  width: 100%;
  border-radius: inherit;
  background: #FF1900;
  height: 12px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 30px;
}

.c0:focus {
  outline: none;
}

<div
    className="c0"
    onClick={[Function]}
    tabIndex={-1}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        style={
          Object {
            "width": "0%",
          }
        }
      />
      <div
        aria-orientation="horizontal"
        aria-valuemax={50}
        aria-valuemin={-50}
        aria-valuenow={-50}
        className="c3"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "calc(0% - 30px * 0)",
          }
        }
        tabIndex={0}
      />
    </div>
  </div>,
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<span
    className="c0"
  >
    
    0
     Kronor
  </span>,
]
`;

exports[`Storyshots Molecules | Slider Small Variant 1`] = `
Array [
  .c3 {
  box-sizing: border-box;
  position: absolute;
  width: 20px;
  height: 20px;
  top: 50%;
  border-radius: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background: #FFFFFF;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  border-width: 4px;
  border-style: solid;
  border-color: #0046FF;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

.c3:active {
  background: hsl(223.5,100%,45%);
  -webkit-transform: translateY(-50%) scale3d(0.85,0.85,0.85);
  -ms-transform: translateY(-50%) scale3d(0.85,0.85,0.85);
  transform: translateY(-50%) scale3d(0.85,0.85,0.85);
}

.c3:focus {
  border: 4px solid hsl(223.5,100%,45%);
  background: hsl(223.5,100%,45%);
}

.c1 {
  position: relative;
  width: 100%;
  height: 4px;
  background: #EBEBE8;
  border-radius: inherit;
  cursor: default;
}

.c2 {
  width: 100%;
  border-radius: inherit;
  background: #0046FF;
  height: 4px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 20px;
}

.c0:focus {
  outline: none;
}

<div
    className="c0"
    onClick={[Function]}
    tabIndex={-1}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        style={
          Object {
            "width": "50%",
          }
        }
      />
      <div
        aria-orientation="horizontal"
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={50}
        className="c3"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchStart={[Function]}
        role="slider"
        style={
          Object {
            "left": "calc(50% - 20px * 0.5)",
          }
        }
        tabIndex={0}
      />
    </div>
  </div>,
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

<span
    className="c0"
  >
    
    50
     Kronor
  </span>,
]
`;
